# lvgl-repos

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  Makefile  README.txt  compile.sh  config.in  lv_conf.h  lv_conf.h.in  lv_conf_default.mk  lv_conf_default_font.h  lv_conf_pc_simulator.mk  lv_drv_conf.h  main.c  main.h
amp_monitor/: main.c  monitor.c  monitor.h
configs/: Config.options  Kconfig  Kconfig.lvgl8  Kconfig.lvgl9  app.in  base_demo.sh  conf.sh  lvgl.in  lvgl.sh  lvgl8.base  lvgl9.base  lvgl9_defconfig  lvgl_demo.sh  mconf
configs/8.4.0/: Config.in.memory  Config.in.others  Config.in.rendering
configs/9.2.2/: Config.in.memory  Config.in.others  Config.in.rendering
configs/lvgl9/: Config.in
demos/: CMakeLists.txt
demos/benchmark/: lv_demo_benchmark.c
demos/fruit_ninja/: CMakeLists.txt  fruit_ninja.c  main.c  main.h
demos/lv_demo/: CMakeLists.txt  main.c
demos/lv_demo/ui/: eez-flow.h  images.c  images.h  screens.c  screens.h  ui.c  ui.h
display/: drm.c  drm.h
env_support/cmake/: custom.cmake  os_desktop.cmake
font/: compress.sh  subset.sh  常用汉字3500.txt
gallery/: CMakeLists.txt  gallery.c  gallery.h  main.c  snapshot.c  snapshot.h
gallery/anims/: cube_flip.c  cube_lyric.c  cube_lyric.h  cube_rotate.c  fade_out.c  fade_slide_out.c  fold.c  fold.h  photo_stream.c  roller.c  roller.h  slide_out.c
hal/: drm_display.c  drm_display.h  evdev.c  hal_sdl.h
hmi/: CMakeLists.txt  applcations.c  applcations.h  endpoint_system.c  endpoint_system.h  hmi.c  hmi.h  load_management.c  load_management.h  main.c
lv_demo/: CMakeLists.txt  main.c
lvgl/: lv_port_disp.c  lv_port_file.c
lvgl8/: lv_port_disp.c  lv_port_disp.h  lv_port_init.c
lvgl9/: lv_port_disp.c  lv_port_indev.c  lv_port_init.c  lv_port_init.h
rkadk/: rkadk.c  rkadk.h
script/: build-helper  build.sh  lv_demo.sh  lvgl8.sh  lvgl9.sh
sdl/: sdl.c  sdl_common.c  sdl_gpu.c  sdl_gpu.h
sdl/gl/: gl.c  gl.h  mat.c  mat.h  shaders.c
sdl/gl/shaders/: bgra.frag  bgra_cube.frag  common.vert  cube.vert  default.vert  fold.vert  rgba.frag  rgba_cube.frag
src/: lv_conf_internal.h  lv_conf_kconfig.h  lv_init.c
src/core/: lv_indev.c  lv_obj.c  lv_obj.h  lv_obj_property.c  lv_refr.c
src/display/: lv_display.c  lv_display.h  lv_display_private.h
src/draw/: lv_draw.c  lv_draw.h  lv_draw_buf.c  lv_draw_buf.h  lv_image_dsc.h  lv_img_buf.h  lv_img_cache.c  lv_img_decoder.c
src/draw/opengles/: lv_draw_opengles.c
src/draw/rga/: lv_draw_buf_rga.c  lv_draw_buf_rga.h  lv_draw_rga.c  lv_draw_rga.h  lv_draw_rga_blend.c  lv_draw_rga_blend.h  lv_draw_rga_utils.c  lv_draw_rga_utils.h
src/draw/sdl/: lv_draw_sdl_composite.c  lv_draw_sdl_img.c  lv_draw_sdl_rect.c  lv_draw_sdl_texture_cache.c  lv_draw_sdl_texture_cache.h  lv_draw_sdl_utils.c
src/draw/sw/: lv_draw_rk_transform.c  lv_draw_rk_transform.h  lv_draw_sw.c  lv_draw_sw.h  lv_draw_sw_arc.c  lv_draw_sw_img.c  lv_draw_sw_transform.c
src/draw/sw/blend/: lv_draw_sw_blend.c  lv_draw_sw_blend.h
src/draw/sw/blend/neon/: lv_blend_neon.S
src/drivers/display/: lv_display_common.h
src/drivers/display/drm/: lv_linux_drm.c  lv_linux_drm.h  lv_linux_drm_egl.c  lv_linux_drm_egl.h
src/drivers/display/rkadk/: rkadk.c  rkadk.h
src/drivers/opengles/: lv_opengles_texture.c
src/drivers/sdl/: lv_sdl_window.c
src/extra/: lv_extra.c  lv_extra.h
src/extra/libs/bmp/: lv_bmp.c  lv_bmp.h
src/extra/libs/freetype/: lv_freetype.c
src/extra/libs/gif/: lv_gif.c  lv_gif.h
src/extra/libs/png/: lv_png.c  lv_png.h
src/extra/libs/rlottie/: lv_rlottie.c
src/extra/libs/sjpg/: lv_sjpg.c  lv_sjpg.h
src/extra/others/ime/: lv_ime_pinyin.c
src/extra/others/snapshot/: lv_snapshot.c
src/extra/themes/default/: lv_theme_default.c
src/extra/widgets/: lv_widgets.h
src/extra/widgets/inputbox/: lv_inputbox.c  lv_inputbox.h
src/extra/widgets/span/: lv_span.c
src/extra/widgets/stiker_matrix/: lv_stiker_matrix.c  lv_stiker_matrix.h
src/hal/: lv_hal_disp.c  lv_hal_indev.c  lv_hal_indev.h
src/misc/: lv_async.c  lv_async.h  lv_fs.c  lv_fs.h  lv_lru.c  lv_profiler_builtin.c  lv_systick.c  lv_systick.h
src/osal/: lv_pthread.c
src/others/sysmon/: lv_sysmon.c
src/stdlib/mimalloc/: lv_mem_core_mimalloc.c
src/widgets/msgbox/: lv_msgbox.c  lv_msgbox.h
